Commit Add Static Files and Update index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andes Website</title>
+
+    <style rel="stylesheet" type="text/css" href="/static/css/maut_style.css"></style>
 </head>
 <body>
     
+    <script src="/static/js/maut_script.js"></script>
 </body>
 </html>
