Change input colomn and row

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,24 +63,7 @@
                                     Baris
                                 </div>
                                 <div class="col-5">
-                                    <select class="form-select form-select-sm" aria-label="Small select example">
-                                        <option selected>Value</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
-                                        <option value="13">13</option>
-                                        <option value="14">14</option>
-                                        <option value="15">15</option>
-                                        <option value="16">16</option>
-                                    </select>
+                                    <input type="number" max="16" min="2" value="2">
                                 </div>
                             </div>
                             <div class="row">
@@ -88,24 +71,7 @@
                                     Kolom
                                 </div>
                                 <div class="col-5">
-                                    <select class="form-select form-select-sm" aria-label="Small select example">
-                                        <option selected>Value</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
-                                        <option value="13">13</option>
-                                        <option value="14">14</option>
-                                        <option value="15">15</option>
-                                        <option value="16">16</option>
-                                    </select>
+                                    <input type="number" max="16" min="2" value="2">
                                 </div>
                             </div>
                         </div>
