--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                                     Baris
                                 </div>
                                 <div class="col-5">
-                                    <input type="number" max="16" min="2" value="2">
+                                    <input class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="16" min="2" value="2">
                                 </div>
                             </div>
                             <div class="row">
@@ -71,7 +71,7 @@
                                     Kolom
                                 </div>
                                 <div class="col-5">
-                                    <input type="number" max="16" min="2" value="2">
+                                    <input class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="16" min="2" value="2">
                                 </div>
                             </div>
                         </div>
@@ -79,28 +79,28 @@
                     <div class="col">
                         <div class="fw-bolder">Pilih file csv / xlsx</div>
                         <div class="mt-2">
-                            <input class="form-control form-control-sm" id="formFileSm" type="file">
+                            <input class="form-control form-control-sm" id="formFileSm" type="file" accept=".csv,.xlsx">
                         </div>
                     </div>
                 </div>
                 <hr>
 
-                <div class="row gap-4 justify-content-center text-center">
+                <div class="row gap-2 justify-content-center text-center">
                     <div class="row">
-                        <div class="col-1 ">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="text" placeholder=""
+                        <div class="col-1">
+                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder=""
                                 aria-label="value">
                         </div>
                         <div class="col-1">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="text" placeholder="" aria-label="value">
+                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-1">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="text" placeholder="" aria-label="value">
+                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                         </div>
                         <div class="col-1">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="text" placeholder="" aria-label="value">
+                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                         </div>
                     </div>
                 </div>
@@ -109,14 +109,14 @@
                 <div class="row">
                     <div class="col-3">
                         <select class="form-select form-select-sm" aria-label="Small select example">
-                            <option selected>Benefit</option>
-                            <option value="1">Cost</option>
+                            <option selected value="benefit">Benefit</option>
+                            <option value="cost">Cost</option>
                         </select>
                     </div>
                     <div class="col-3">
                         <select class="form-select form-select-sm" aria-label="Small select example">
-                            <option selected>Benefit</option>
-                            <option value="1">Cost</option>
+                            <option selected value="benefit">Benefit</option>
+                            <option value="cost">Cost</option>
                         </select>
                     </div>
                 </div>
@@ -124,10 +124,10 @@
                 <div class="fw-bolder">Bobot</div>
                 <div class="row">
                     <div class="col-1 ">
-                        <input class="form-control form-control-sm p-0.5 border-black" type="text" placeholder="" aria-label="value">
+                        <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                     </div>
                     <div class="col-1">
-                        <input class="form-control form-control-sm p-0.5 border-black" type="text" placeholder="" aria-label="value">
+                        <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                     </div>
                 </div>
                 <br>
