--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                                     Baris
                                 </div>
                                 <div class="col-5">
-                                    <input class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="16" min="2" value="2">
+                                    <input id="baris" class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="16" min="2" value="2" onchange="change_matrix_shape()">
                                 </div>
                             </div>
                             <div class="row">
@@ -71,7 +71,7 @@
                                     Kolom
                                 </div>
                                 <div class="col-5">
-                                    <input class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="16" min="2" value="2">
+                                    <input id="kolom" class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="16" min="2" value="2" onchange="change_matrix_shape()">
                                 </div>
                             </div>
                         </div>
@@ -85,36 +85,36 @@
                 </div>
                 <hr>
 
-                <div class="row gap-2 justify-content-center text-center">
+                <div class="row gap-2 justify-content-center text-center"  id="initial-matrix">
                     <div class="row">
                         <div class="col-1">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder=""
+                            <input id="x00" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder=""
                                 aria-label="value">
                         </div>
                         <div class="col-1">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                            <input id="x00" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-1">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                            <input id="x10" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                         </div>
                         <div class="col-1">
-                            <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                            <input id="x11" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                         </div>
                     </div>
                 </div>
                 <br>
                 <div class="fw-bolder">Jenis</div>
-                <div class="row">
+                <div class="row" id="initial-type">
                     <div class="col-3">
-                        <select class="form-select form-select-sm" aria-label="Small select example">
+                        <select id="t0" class="form-select form-select-sm" aria-label="Small select example">
                             <option selected value="benefit">Benefit</option>
                             <option value="cost">Cost</option>
                         </select>
                     </div>
                     <div class="col-3">
-                        <select class="form-select form-select-sm" aria-label="Small select example">
+                        <select id="t1" class="form-select form-select-sm" aria-label="Small select example">
                             <option selected value="benefit">Benefit</option>
                             <option value="cost">Cost</option>
                         </select>
@@ -122,12 +122,12 @@
                 </div>
                 <br>
                 <div class="fw-bolder">Bobot</div>
-                <div class="row">
+                <div class="row" id="initial-weight">
                     <div class="col-1 ">
-                        <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                        <input id="w0" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                     </div>
                     <div class="col-1">
-                        <input class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                        <input id="w1" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
                     </div>
                 </div>
                 <br>
@@ -138,7 +138,7 @@
                 <br>
                 <div class="fw-bolder">1. Normalisasi Matriks</div>
                 <br>
-                <div class="row gap-3 justify-content-center text-center">
+                <div class="row gap-2 justify-content-center text-center">
                     <div class="row gap-2">
                         <div class="col-2 border bg-info border-black rounded-1">
                             Max
@@ -363,6 +363,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+        
+    <!-- Import JQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="/static/js/maut_script.js"></script>
 </body>
 
