--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
             </center>
         </div>
         <div class="calculate">
-            <div class="calculate-box p-4">
+            <div class="calculate-box p-4 shadow-sm" style="border-radius: 8px;">
                 <div class="row">
                     <div class="col">
                         <div class="fw-bolder">Matriks</div>
@@ -71,7 +71,7 @@
                                     Kolom
                                 </div>
                                 <div class="col-5">
-                                    <input id="kolom" class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="16" min="2" value="2" onchange="change_matrix_shape()">
+                                    <input id="kolom" class="form-control form-control-sm p-0.5 border-black col-2" type="number" max="18" min="2" value="2" onchange="change_matrix_shape()">
                                 </div>
                             </div>
                         </div>
@@ -85,103 +85,151 @@
                 </div>
                 <hr>
 
-                <div class="row gap-2 justify-content-center text-center"  id="initial-matrix">
-                    <div class="row">
-                        <div class="col-1">
-                            <input id="x00" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder=""
-                                aria-label="value">
+                <div class="row gap-1 justify-content-center text-center" id="initial-matrix">
+                    <div class="d-flex">
+                        <div class="p-1 small-box">
+                            <input id="x00" class="form-control form-control-sm border-black" type="number" min="1" value="1" placeholder="" aria-label="value"
+                            data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A1-C1">
                         </div>
-                        <div class="col-1">
-                            <input id="x00" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                        <div class="p-1 small-box">
+                            <input id="x01" class="form-control form-control-sm border-black" type="number" min="1" value="1" placeholder="" aria-label="value"
+                            data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A1-C2">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-1">
-                            <input id="x10" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                    <div class="d-flex">
+                        <div class="p-1 small-box">
+                            <input id="x10" class="form-control form-control-sm border-black" type="number" min="1" value="1" placeholder="" aria-label="value"
+                            data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A2-C1">
                         </div>
-                        <div class="col-1">
-                            <input id="x11" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                        <div class="p-1 small-box">
+                            <input id="x11" class="form-control form-control-sm border-black" type="number" min="1" value="1" placeholder="" aria-label="value"
+                            data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A2-C2">
                         </div>
                     </div>
                 </div>
                 <br>
-                <div class="fw-bolder">Jenis</div>
-                <div class="row" id="initial-type">
-                    <div class="col-3">
-                        <select id="t0" class="form-select form-select-sm" aria-label="Small select example">
+                <div class="fw-bolder mb-2">Jenis</div>
+                <div class="d-flex" id="initial-type">
+                    <div class="p-1">
+                        <select id="t0" class="super-small-box form-select form-select-sm border-black" aria-label="Small select example"
+                            data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="C1">
                             <option selected value="benefit">Benefit</option>
                             <option value="cost">Cost</option>
                         </select>
                     </div>
-                    <div class="col-3">
-                        <select id="t1" class="form-select form-select-sm" aria-label="Small select example">
+                    <div class="p-1">
+                        <select id="t1" class="super-small-box form-select form-select-sm border-black" aria-label="Small select example"
+                            data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="C2">
                             <option selected value="benefit">Benefit</option>
                             <option value="cost">Cost</option>
                         </select>
                     </div>
                 </div>
                 <br>
-                <div class="fw-bolder">Bobot</div>
-                <div class="row" id="initial-weight">
-                    <div class="col-1 ">
-                        <input id="w0" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                <div class="fw-bolder mb-2">Bobot</div>
+                <div class="d-flex" id="initial-weight">
+                    <div class="p-1 small-box">
+                        <input id="w0" class="form-control form-control-sm border-black" type="number" min="1" value="1" placeholder="" aria-label="value"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        data-bs-custom-class="custom-tooltip"
+                        data-bs-title="C1">
                     </div>
-                    <div class="col-1">
-                        <input id="w1" class="form-control form-control-sm p-0.5 border-black" type="number" min="1" value="1" placeholder="" aria-label="value">
+                    <div class="p-1 small-box">
+                        <input id="w1" class="form-control form-control-sm border-black" type="number" min="1" value="1" placeholder="" aria-label="value"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        data-bs-custom-class="custom-tooltip"
+                        data-bs-title="C2">
                     </div>
                 </div>
                 <br>
-                <button type="button" class="btn btn-primary">Kalkulasi</button>
+                <button type="button" class="btn andes-button">Kalkulasi</button>
             </div>
-            <div class="calculate-box mt-5 p-4">
+            <div class="calculate-box mt-5 p-4 shadow-sm" style="border-radius: 8px;">
                 <div class="fw-bolder">Hasil Kalkulasi</div>
                 <br>
                 <div class="fw-bolder">1. Normalisasi Matriks</div>
                 <br>
                 <div class="row gap-2 justify-content-center text-center">
                     <div class="row gap-2">
-                        <div class="col-2 border bg-info border-black rounded-1">
+                        <div class="col-2 borderborder-black rounded-1 super-small-box" style="background-color: #C5FFF8; border:solid black; border-width: 1px;">
                             Max
                         </div>
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        data-bs-custom-class="custom-tooltip"
+                        data-bs-title="Max-C1">
                             a
                         </div>
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        data-bs-custom-class="custom-tooltip"
+                        data-bs-title="Max-C2">
                             a
                         </div>
                     </div>
-                    <div class="row gap-2">
-                        <div class="col-2 border  border-black bg-info rounded-1">
+                    <div class="row gap-2 mb-3">
+                        <div class="col-2 borderborder-black rounded-1 super-small-box" style="background-color: #C5FFF8; border:solid black; border-width: 1px;">
                             Min
                         </div>
                     
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        data-bs-custom-class="custom-tooltip"
+                        data-bs-title="Min-C1">
                             a
                         </div>
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        data-bs-custom-class="custom-tooltip"
+                        data-bs-title="Min-C2">
+                            a
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row gap-2">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A1-C1">
+                            a
+                        </div>
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A1-C2">
                             a
                         </div>
                     </div>
                     <div class="row gap-2">
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A2-C1">
                             a
                         </div>
-                        <div class="col-1 border border-black rounded-1">
-                            a
-                        </div>
-                    </div>
-                    <div class="row gap-2">
-                        <div class="col-1 border border-black rounded-1">
-                            a
-                        </div>
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A2-C2">
                             a
                         </div>
                     </div>
                 </div>
                 <br>
                 <p class="d-inline-flex gap-1">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                    <button type="button" class="btn andes-button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">Detail Kalkulasi</button>
                 </p>
                 <div class="collapse" id="collapseExample">
@@ -196,25 +244,37 @@
                 <br>
                 <div class="row gap-2 justify-content-center text-center">
                     <div class="row gap-2">
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A1-C1">
                             a
                         </div>
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A1-C2">
                             a
                         </div>
                     </div>
                     <div class="row gap-2">
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A2-C1">
                             a
                         </div>
-                        <div class="col-1 border border-black rounded-1">
+                        <div class="col-1 border border-black rounded-1 super-small-box"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-custom-class="custom-tooltip"
+                            data-bs-title="A2-C2">
                             a
                         </div>
                     </div>
                 </div>
                 <br>
                 <p class="d-inline-flex gap-1">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                    <button type="button" class="btn andes-button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">Detail Kalkulasi</button>
                 </p>
                 <div class="collapse" id="collapseExample">
@@ -228,9 +288,20 @@
                 <div class="fw-bolder">3. Mendapatkan Nilai Utilitas Akhir dan Perangkingan</div>
                 <br>
                 <div class="col-6 border border-black rounded-2">
-                    <table class="table table-striped-columns">
+                    <style>
+                        .table-striped thead {
+                            background-color: #5FBDFF;
+                        }
+                        .table-striped tbody tr:nth-child(odd) {
+                            background-color: rgba(95, 189, 255, 0.25);
+                        }
+                        .table-striped tbody tr:nth-child(even) {
+                            background-color: rgba(95, 189, 255, 0.5);
+                        }
+                    </style>
+                    <table class="table table-striped">
                         <thead>
-                            <tr>
+                            <tr style="font-weight: bold;">
                                 <td>Alternatif</td>
                                 <td>Utilitas</td>
                                 <td>Peringkat</td>
@@ -249,10 +320,11 @@
                             </tr>
                         </tbody>
                     </table>
+                    
                 </div>
                 <br>
                 <p class="d-inline-flex gap-1">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                    <button type="button" class="btn andes-button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">Detail Kalkulasi</button>
                 </p>
                 <div class="collapse" id="collapseExample">
