Commit hide and show detail

--- a/templates/index.html
+++ b/templates/index.html
@@ -228,18 +228,17 @@
                     </div>
                 </div>
                 <br>
-                <p class="d-inline-flex gap-1">
-                    <button type="button" class="btn andes-button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">Detail Kalkulasi</button>
+                <p class="d-inline-flex gap-1" id="detail-button-1">
+                    <button type="button" class="btn andes-button" onclick="open_detail_calculation(1)">Detail Kalkulasi</button>
                 </p>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
+                <div>
+                    <div class="card card-body detail" id="detail-1">
                         Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user
                         activates the relevant trigger.
                     </div>
                 </div>
       
-                <br><br>
+                <br>
                 <div class="fw-bolder">2. Menghitung Nilai Marginal Utilitas</div>
                 <br>
                 <div class="row gap-2 justify-content-center text-center">
@@ -273,17 +272,16 @@
                     </div>
                 </div>
                 <br>
-                <p class="d-inline-flex gap-1">
-                    <button type="button" class="btn andes-button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">Detail Kalkulasi</button>
+                <p class="d-inline-flex gap-1" id="detail-button-2">
+                    <button type="button" class="btn andes-button" onclick="open_detail_calculation(2)">Detail Kalkulasi</button>
                 </p>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
+                <div>
+                    <div class="card card-body detail" id="detail-2">
                         Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user
                         activates the relevant trigger.
                     </div>
                 </div>
-                <br><br>
+                <br>
 
                 <div class="fw-bolder">3. Mendapatkan Nilai Utilitas Akhir dan Perangkingan</div>
                 <br>
@@ -323,12 +321,11 @@
                     
                 </div>
                 <br>
-                <p class="d-inline-flex gap-1">
-                    <button type="button" class="btn andes-button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">Detail Kalkulasi</button>
+                <p class="d-inline-flex gap-1" id="detail-button-3">
+                    <button type="button" class="btn andes-button" onclick="open_detail_calculation(3)">Detail Kalkulasi</button>
                 </p>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
+                <div>
+                    <div class="card card-body detail" id="detail-3">
                         Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user
                         activates the relevant trigger.
                     </div>
