--- a/static/css/maut_style.css
+++ b/static/css/maut_style.css
@@ -22,6 +22,10 @@
   --bs-tooltip-bg: var(--bs-dark);
 }
 
+.detail {
+    display: none;
+}
+
 .utama{
     background-color: #ffffff;
     margin: 0;
