--- a/templates/index.html
+++ b/templates/index.html
@@ -384,7 +384,7 @@
                             <div class="col p-2 mt-3">
                                 <h5 class="judul-contact">Contact</h5>
                                 <div class="d-grid justify-content-center">
-                                    <div class="row">
+                                    <div class="row mt-2">
                                         <div class="col-2">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-envelope-fill"
                                                 viewBox="0 0 16 16">
@@ -396,7 +396,7 @@
                                             <h6><a href="" style="text-decoration: underline; color: white ">antdecision@gmail.com</a></h6>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row mt-2">
                                         <div class="col-2">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-instagram"
                                                 viewBox="0 0 16 16">
@@ -408,7 +408,7 @@
                                             <h6>@antdecision</h6>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row mt-2">
                                         <div class="col-2">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-youtube"
                                                 viewBox="0 0 16 16">
