Commit Post CSV File

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="fw-bolder">Pilih file csv / xlsx</div>
+                        <div class="fw-bolder">Pilih file csv</div>
                         <div class="mt-2">
                             <input class="form-control form-control-sm" id="file" type="file" accept=".csv,.xlsx" onchange="change2matrix()">
                         </div>
