--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
                 <div class="fw-bolder">1. Normalisasi Matriks</div>
                 <br>
                 <div class="row gap-2 justify-content-center text-center">
-                    <div class="row gap-2">
+                    <div class="row gap-2" id="max-column">
                         <div class="col-2 borderborder-black rounded-1 super-small-box" style="background-color: #C5FFF8; border:solid black; border-width: 1px;">
                             Max
                         </div>
@@ -181,7 +181,7 @@
                             a
                         </div>
                     </div>
-                    <div class="row gap-2 mb-3">
+                    <div class="row gap-2 mb-3" id="min-column">
                         <div class="col-2 borderborder-black rounded-1 super-small-box" style="background-color: #C5FFF8; border:solid black; border-width: 1px;">
                             Min
                         </div>
