--- a/templates/index.html
+++ b/templates/index.html
@@ -200,32 +200,34 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="row gap-2">
-                        <div class="col-1 border border-black rounded-1 super-small-box"
-                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip"
-                            data-bs-title="A1-C1">
-                            a
+                    <div class="row gap-2" id="matriks-ternormalisasi">
+                        <div class="row gap-2">
+                            <div class="col-1 border border-black rounded-1 super-small-box"
+                                data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                data-bs-custom-class="custom-tooltip"
+                                data-bs-title="A1-C1" id="n11">
+                                a
+                            </div>
+                            <div class="col-1 border border-black rounded-1 super-small-box"
+                                data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                data-bs-custom-class="custom-tooltip"
+                                data-bs-title="A1-C2" id="n12">
+                                a
+                            </div>
                         </div>
-                        <div class="col-1 border border-black rounded-1 super-small-box"
-                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip"
-                            data-bs-title="A1-C2">
-                            a
-                        </div>
-                    </div>
-                    <div class="row gap-2">
-                        <div class="col-1 border border-black rounded-1 super-small-box"
-                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip"
-                            data-bs-title="A2-C1">
-                            a
-                        </div>
-                        <div class="col-1 border border-black rounded-1 super-small-box"
-                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip"
-                            data-bs-title="A2-C2">
-                            a
+                        <div class="row gap-2">
+                            <div class="col-1 border border-black rounded-1 super-small-box"
+                                data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                data-bs-custom-class="custom-tooltip"
+                                data-bs-title="A2-C1" id="n21">
+                                a
+                            </div>
+                            <div class="col-1 border border-black rounded-1 super-small-box"
+                                data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                data-bs-custom-class="custom-tooltip"
+                                data-bs-title="A2-C2" id="n22">
+                                a
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -244,17 +246,17 @@
                 <div class="fw-bolder">2. Menghitung Nilai Marginal Utilitas</div>
                     <br>
                 <div class="row gap-2 justify-content-center text-center">
-                    <div class="row gap-2">
+                    <div class="row gap-2" id="matriks-marginal">
                         <div class="col-1 border border-black rounded-1 super-small-box"
                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                             data-bs-custom-class="custom-tooltip"
-                            data-bs-title="A1-C1">
+                            data-bs-title="A1-C1" id="m11">
                             a
                         </div>
                         <div class="col-1 border border-black rounded-1 super-small-box"
                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                             data-bs-custom-class="custom-tooltip"
-                            data-bs-title="A1-C2">
+                            data-bs-title="A1-C2" id="m12">
                             a
                         </div>
                         </div>
@@ -262,13 +264,13 @@
                             <div class="col-1 border border-black rounded-1 super-small-box"
                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                 data-bs-custom-class="custom-tooltip"
-                                data-bs-title="A2-C1">
+                                data-bs-title="A2-C1" id="m21">
                                 a
                             </div>
                             <div class="col-1 border border-black rounded-1 super-small-box"
                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                 data-bs-custom-class="custom-tooltip"
-                                data-bs-title="A2-C2">
+                                data-bs-title="A2-C2" id="m22">
                                 a
                             </div>
                         </div>
