Commit Last Utility and Rank Restult

--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="row gap-2" id="matriks-ternormalisasi">
+                    <div class="row gap-2 text-start" id="matriks-ternormalisasi">
                         <div class="row gap-2">
                             <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1"
@@ -235,7 +235,7 @@
                 <br>
                 <div class="fw-bolder">2. Menghitung Nilai Marginal Utilitas</div>
                 <br>
-                <div class="row gap-2 justify-content-center text-center" id="matriks-marginal">
+                <div class="row gap-2 justify-content-center text-start" id="matriks-marginal">
                     <div class="row gap-2">
                         <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                             data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1"
@@ -286,7 +286,7 @@
                                 <td>Peringkat</td>
                             </tr>
                         </thead>
-                        <tbody id="utilitas-column">
+                        <tbody id="utility-column">
                             <tr>
                                 <td>d</td>
                                 <td>d</td>
