--- a/static/css/maut_style.css
+++ b/static/css/maut_style.css
@@ -2,7 +2,6 @@
     color: white;
     background-color: #7B66FF;
     opacity: 0.75;
-    display: block;
 }
 
 .calc-button {
@@ -105,7 +104,7 @@ body{
 }
 
 #result-box {
-    display: block;
+    display: none;
 }
 
 .small-box {
