--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="Andes Website - Multi Attribute Utility Theroy Calculator"/>
+    <meta property="og:description" content="Website ini membantu Anda dalam melakukan pengambilan keputusan dengan metode MAUT (Multi Attribute Utility Theroy)"/>
+    <meta property="og:image" content="{{ url_for('static', filename='img/banner-andes.png') }}"/>
+
     <link rel="icon" href="{{ url_for('static', filename='img/andes_logo_black_1.png') }}" />
 
     <title>Andes Website</title>
