--- a/templates/index.html
+++ b/templates/index.html
@@ -45,21 +45,21 @@
 </head>
 
 <body>
-    <section id="scrollspyHeading1" class="background-gambar">
+    <section id="home-page" class="background-gambar">
         <nav class="navbar navbar-expand-lg bg-info sticky-top bg-opacity-50">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/static/img/logo.png" alt=""
+                <a class="navbar-brand" href="#about-page"><img src="/static/img/logo.png" alt=""
                         class="rounded-circle logo-about" style="background-color: #000"></a>
                 <div class="collapse navbar-collapse justify-content-evenly me-5 pe-4">
                     <ul class="nav nav-pills">
                         <li class="nav-item">
-                            <a class="nav-link text-light" aria-current="page" href="#scrollspyHeading1">Home</a>
+                            <a class="nav-link text-light" aria-current="page" href="#home-page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="#scrollspyHeading2">Calculate</a>
+                            <a class="nav-link text-light" href="#calculate-page">Calculate</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="#scrollspyHeading3">About</a>
+                            <a class="nav-link text-light" href="#about-page">About</a>
                         </li>
                     </ul>
                 </div>
@@ -76,11 +76,11 @@
 
                     <h4></h4>
                     <a type="button" class="btn btn-light opacity-75 text-decoration-none link-dark px-5"
-                        href="#scrollspyHeading2">GO!</a>
+                        href="#calculate-page">GO!</a>
                 </div>
             </center>
         </div>
-        <div id="scrollspyHeading2" class="calculate">
+        <div id="calculate-page" class="calculate">
             <div class="calculate-box p-4 shadow-sm" style="border-radius: 8px;">
                 <div class="row">
                     <div class="col">
@@ -336,7 +336,7 @@
 
             </div>
         </div>
-        <div id="scrollspyHeading3" class="about text-light">
+        <div id="about-page" class="about text-light">
             <div class="about-dark bg-dark bg-opacity-50">
                 <div class="container text-center">
                     <div class="row">
