--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         <nav class="navbar navbar-expand-lg bg-info sticky-top bg-opacity-50">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#about-page"><img src="/static/img/logo.png" alt=""
-                        class="rounded-circle logo-about" style="background-color: #000"></a>
+                        class="rounded-circle logo-main" style="background-color: #000"></a>
                 <div class="collapse navbar-collapse justify-content-evenly me-5 pe-4">
                     <ul class="nav nav-pills">
                         <li class="nav-item">
@@ -180,7 +180,9 @@
                     </div>
                 </div>
                 <br>
-                <button type="button" class="btn calc-button" onclick="calculate()">Kalkulasi</button>
+                <button type="button" class="m-1 btn calc-button" onclick="calculate()">Kalkulasi</button>
+
+                <button type="button" class="m-1 btn download-button" onclick="download_csv()">Download CSV</button>
             </div>
             <div class="calculate-box mt-5 p-4 shadow-sm" style="border-radius: 8px;" id="result-box">
                 <div class="fw-bolder">Hasil Kalkulasi</div>
