Commit Add Buffering

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,11 @@
                         </li>
                     </ul>
                 </div>
+                <div class="clearfix" style="display: none;">
+                    <div class="spinner-border float-end" role="status">
+                      <span class="visually-hidden">Loading...</span>
+                    </div>
+                  </div>
             </div>
         </nav>
         <div class="d-flex align-items-center justify-content-center text-light my-5" style="min-height: 80vh">
